# Live2D-JavaBinding

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  release.yml
binding/src/main/java/: module-info.java
binding/src/main/java/dev/eatgrapes/live2d/: CubismFramework.java  CubismUserModel.java  LibraryLoader.java  Native.java
example/: pom.xml
example/src/main/java/dev/eatgrapes/live2d/example/: ControlPanel.java  Main.java
native/: CMakeLists.txt
native/src/: CubismFramework_JNI.cpp  CubismUserModel_JNI.cpp  gles2_shim.c
scripts/: build.py
wiki_docs/: Getting-Started.md  Home.md  Interaction-and-Parameters.md  Lifecycle-Management.md  Loading-Assets.md  Motion-and-Expressions.md  Rendering-Loop.md
